tests/good/binop/bool/boolop/goodand.go
package main;
import "fmt";

func main(){
	fmt.Print(true&&true)
	fmt.Print("\n")
}

/*
== Expected program output ==
true
*/