tests/bad/loops/if_loops.go
package main
import "fmt"

func main () {
	if true {
		fmt.Print("true")
	}
}